update logic add item  and page for cart + order